--- a/table.html
+++ b/table.html
@@ -10,10 +10,12 @@
     border-style: ridge;
     border-color: black;
     border-spacing: 15px;
-    background-color: blueviolet;
-    bo
-    width: 6%;
+    background-color: blueviolet
+    width: 20%;
        
+ }
+ body{
+    background-color: deepskyblue;
  }
  
 
