--- a/signup.html
+++ b/signup.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emmily Stephanie</title>
     <style>
-body{
-    background-color: deepskyblue;
-}
+
+
+
     </style>
 
 </head>
 <body>
-<forms>
-<h1>Start here</h1>
-<br>
-<h2>Vogue Sign Up</h2>
+    <div class="assign">
+        <div class="image">
+            <img id="image"src="ground.webp">
+        </div>
+    <form class="message">
+        <h1>Hey,hello 	&#128512; </h1>
+        <p1>Enter the information you entered while registering</p1>
+    <br/>
 <label>Already have an a account?<button><a href="index.html">login</a></button></label>
 <br/>
 <br/>
